fix work layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,6 @@
   }
 
   .header-container,
-  .card-container,
   .modal-container {
     height: 100vh;
   }
